Updating the paper to make it a long-form paper ready for journal submission or as an arXiv

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -94,7 +94,9 @@
 \input{sections/results}
 \input{sections/challenges}
 \input{sections/use-cases}
+\input{sections/relationship.tex}
 \input{sections/discussion}
+\input{sections/academic.tex}
 \input{sections/related-works}
 \input{sections/conclusion}
 
