--- a/paper/sections/abstract.tex
+++ b/paper/sections/abstract.tex
@@ -3,7 +3,7 @@
 \begin{abstract}
 Bitcoin's success has led to significant interest in its underlying components, particularly Blockchain technology.
 Nearly 10 years after Bitcoin's initial release, the community still suffers from a lack of clarity regarding what properties defines Blockchain technology, its relationship to competing technologies, and which of its proposed use-cases are tenable and which are little more than hype.
-In this paper we answer three common questions regarding Blockchain technology: (1) what exactly is Blockchain technology, (2) what capabilities does it provide, and (3) what are good applications for Blockchain technology.
+In this paper we answer four common questions regarding Blockchain technology: (1) what exactly is Blockchain technology, (2) what capabilities does it provide, and (3) what are good applications for Blockchain technology, and (4) how does it relate to other approache distributed technologies (e.g., distributed databases).
 We accomplish this goal by using grounded theory---a structured approach to gathering and analyzing qualitative data---to thoroughly analyze a large corpus of literature on Blockchain technology.
 This method enables us to answer the above questions while limiting researcher bias, separating thought leadership from peddled hype and identifying  open research questions related to Blockchain technology.
 %We also discuss lessons learned from our analysis of this space using this approach.
