--- a/paper/sections/discussion.tex
+++ b/paper/sections/discussion.tex
@@ -8,14 +8,14 @@ In this section we discuss the remaining results from our grounded theory work.
 \subsection{Normative properties}
 \label{sec:normative}
 
-\begin{figure}
+\begin{figure*}
 	\centering
-	\includegraphics[page=3,width=\columnwidth]{figures/grounded-theory-main}
+	\includegraphics[page=3,scale=.75]{figures/grounded-theory-main}
 	
 	{\small Orange---normative properties, purple---capabilities, blue---technical properties, green---technical primitives. Arrows indicate that the destination depends on the source.}
 	\caption{Normative Properties for Blockchain Technology}
 	\label{fig:normative-properties}
-\end{figure}
+\end{figure*}
 
 Within the literature we analyzed, there were a set of properties that were not technical properties directly provided by Blockchain technology, but rather expressed desired properties for systems built using Blockchain technology (\ie normative properties).
 These properties are shown in Figure~\ref{fig:normative-properties}.
