--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -18,11 +18,11 @@ While Bitcoin's building blocks were not novel, the composition of these propert
 
 At the peak of its popularity, Bitcoin's market capitalization reached \$835.69 billion (USD), though at the time of this writing it has seen a decrease in both its stature and market capitalization (\$60.78 billion).
 Nevertheless, there remains significant interest in the question of whether the technology underlying Bitcoin---known as \emph{Blockchain technology} or {Blockchain} for short---could be used to build other interesting cryptocurrencies or distributed systems.
-In particular, we have consistently heard researchers, business executives, and government leadership ask the following three questions: (1) what exactly is Blockchain technology, (2) what capabilities does it provide, and (3) what are good applications for Blockchain technology.%, and (4) how does it relate to other approache distributed technologies (e.g., distributed databases).
+In particular, we have consistently heard researchers, business executives, and government leadership ask the following four questions: (1) what exactly is Blockchain technology, (2) what capabilities does it provide, and (3) what are good applications for Blockchain technology, and (4) how does it relate to other approache distributed technologies (e.g., distributed databases).
 
 Unfortunately, there is a lack of clarity regarding the answers to these questions in both the community and the literature, impeding the ability for researchers to properly understand, evaluate, and leverage Blockchain technology.
 This lack of clarity stems at least in part from competing viewpoints and terminology regarding Blockchain technology, resulting in seemingly contradictory statements that can all be true in their respective contexts.
-In this paper, we attempt to address this ambiguity and provide a holistic overview of Blockchain technology, set forth a common lexicon for discussing Blockchain technology, and answer the three questions identified above.
+In this paper, we attempt to address this ambiguity and provide a holistic overview of Blockchain technology, set forth a common lexicon for discussing Blockchain technology, and answer the questions identified above.
 
 \begin{table}
 	\centering
@@ -40,7 +40,7 @@ In this paper, we attempt to address this ambiguity and provide a holistic overv
 \end{table}
 
 To accomplish these goals, we conducted a textual analysis of papers on Blockchain technology from non-academic sources (hereafter referred to as \emph{industry}).
-The choice to focus our analysis on literature from industry was based on the unique suitability of that literature (see Table~\ref{tab:sources}) to answer the three questions we identified above:
+The choice to focus our analysis on literature from industry was based on the unique suitability of that literature (see Table~\ref{tab:sources}) to answer the questions we identified above:
 First, industry became heavily involved in Blockchain technology before academia and thus has had more time to fully consider its implications.
 Second, industry literature tends to discuss and evaluate Blockchain technology holistically, which provides the broad perspective needed to answer questions one and two.
 Finally, much of industry literature is written by use case experts who are well positioned to answer the third question.
@@ -55,9 +55,9 @@ In this regard, the existing literature acts as a good compliment to this paper-
 
 %To address these limitations, we analyzed literature produced by industry using grounded theory methodology~\cite{glaser1965constant,strauss1990basics,corbin1990grounded} (also known as the constant comparative method).
 %This allowed us to extract and separate valuable technical insights out from the hype and technical misunderstandings that permeate this body of work.
-%Based on this analysis of data from industry, interspersed with our own knowledge and a review of the academic literature, we are able to answer the three questions commonly asked in relation to Blockchain technology, as well as shed light on industry's understandings and misunderstandings of the technology. 
+%Based on this analysis of data from industry, interspersed with our own knowledge and a review of the academic literature, we are able to answer the questions commonly asked in relation to Blockchain technology, as well as shed light on industry's understandings and misunderstandings of the technology. 
 
-Ultimately, our technical analysis was successful at answering our three questions and in this paper we present those answers.
+Ultimately, our technical analysis was successful at answering the questions identified previously and in this paper we present those answers.
 While some readers may find the results of this paper unsurprising or differing from their viewpoints regarding Blockchain technology, we believe that this paper will be helpful to the community at large (both Blockchain experts and non-experts) and provide a common reference point for discussion on Blockchain technology.
 %While many of the results in this work might not be surprising to some readers, our experience suggests that knowledge of Blockchain technology is neither universal nor complete within the security community.
 Taken together, the results in this paper represent the most complete overview of Blockchain technology and its potential use cases available in a single work that we are aware of.
@@ -101,7 +101,7 @@ Concretely, our key contributions are:
 	\item \textbf{Leveraging grounded theory to analyze industrial literature while limiting research bias and separating hype from sound technical details.}
 	While there are significant benefits to analyzing industrial literature, there is also a significant amount of hype and imprecise language.
 	To address these limitations, we leveraged the grounded theory methodology~\cite{glaser1965constant,strauss1990basics,corbin1990grounded} (also known as the constant comparative method) to extract and separate valuable technical insights out from the hype and technical misunderstandings that permeate this body of work.
-	Based on this analysis of data from industry, interspersed with our own knowledge and a review of the academic literature, we can answer the three questions we identified while remaining grounded in the data we analyzed.
+	Based on this analysis of data from industry, interspersed with our own knowledge and a review of the academic literature, we can answer the common questions we identified while remaining grounded in the data we analyzed.
 	We were also able to shed light on industry's understandings and misunderstandings of Blockchain technology. 
 	
 	
