--- a/paper/sections/results.tex
+++ b/paper/sections/results.tex
@@ -3,19 +3,19 @@
 \section{What is Blockchain Technology?}
 \label{sec:blockchain}
 
-\begin{figure}
+\begin{figure*}
 	\centering
-	\includegraphics[page=2,width=\columnwidth]{figures/grounded-theory-main}
+	\includegraphics[page=2,scale=.75]{figures/grounded-theory-main}
 	
 	\caption{Technical Properties for Blockchain Technology}
 	\label{fig:technical-properties}
-\end{figure}
+\end{figure*}
 
 Our literature analysis finds three key groupings of properties related to Blockchain technology (see Figure~\ref{fig:technical-properties}).\footnote{A version of this chart that shows the technical primitives that support the technical properties is given in the Appendix (see Figure~\ref{fig:technical-properties-full}).}
 Most importantly, consensus is used to provide \textit{shared governance and operation}.
 In support of shared governance and operation, other technical properties provide \textit{verifiable state} and {resilience to data loss}.
 By themselves, these property groups are nothing new, but used together they define \emph{Blockchain technology}, or \emph{Blockchain} for short.
-In Appendix~\ref{sec:distributed-comparison} we describe how other distributed technologies compare to Blockchain technology.
+In Section~\ref{sec:distributed-comparison} we describe how other distributed technologies compare to Blockchain technology.
 
 \subsection{Shared Governance and Operation}
 \label{sec:sharedgov}
@@ -110,14 +110,14 @@ Additionally, by reducing the number of miners responsible for any given transac
 \section{What are Blockchain Technology's Capabilities?}
 \label{sec:capabilities}
 
-\begin{figure}
+\begin{figure*}
 	\centering
-	\includegraphics[page=4,width=\columnwidth]{figures/grounded-theory-main}
+	\includegraphics[page=4,scale=.75]{figures/grounded-theory-main}
 	
 	{\small Purple---capabilities, blue---technical properties, green---technical primitives. Arrows indicate that the destination depends on the source.}
 	\caption{Capabilities for Blockchain Technology}
 	\label{fig:Capabilities}
-\end{figure}
+\end{figure*}
 
 Capabilities define the high-level functionality that can be achieved by using Blockchain technology in a system's design.
 Blockchain's three core capabilities were described in the preceding section: (1) shared governance and operation, (2) verifiable state, and (3) resilience to data loss.
